# Todo-App

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  QUICK_START.md  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
backend/: package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: index.ts
backend/src/routes/: tasks.ts
doc/: design.md  intro.md  jishu.md  submission.md  tasks-backup-2025-12-13 (3).json  tasks-backup-2025-12-13 (4).json
frontend/: .env.production  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: baseUrl.ts  tasks.ts
frontend/src/components/QuickInput/: QuickInput.tsx
frontend/src/components/RightPanel/: RightPanelContext.tsx
frontend/src/components/TaskDetail/: TaskDetailDrawer.tsx  TaskDetailPanel.tsx
frontend/src/components/TaskGroup/: TaskGroup.tsx
frontend/src/components/TaskItem/: SortableTaskItem.tsx  TaskItem.tsx
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/Abandoned/: AbandonedPage.tsx
frontend/src/pages/All/: AllPage.tsx
frontend/src/pages/Analysis/: AnalysisPage.tsx
frontend/src/pages/Calendar/: CalendarPage.tsx
frontend/src/pages/Categories/: CategoriesPage.tsx
frontend/src/pages/Inbox/: InboxPage.tsx
frontend/src/pages/Settings/: SettingsPage.tsx
frontend/src/types/: index.ts  task.ts
frontend/src/utils/: taskTree.ts
scripts/: gen-tauri-icon.mjs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
(+2 files in other folders)
