[package]
name = "todo-project-desktop"
version = "0.1.0"
description = "Todo Project Desktop (Tauri)"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
